@@ -1,5 +1,11 @@
 2008-12-18  Jürg Billeter  <j@bitron.ch>
 
+	* gobject/valaccodebasemodule.vala:
+
+	Fix member initializers for array fields, fixes bug 562600
+
+2008-12-18  Jürg Billeter  <j@bitron.ch>
+
 	* vala/valaassignment.vala:
 
 	Report error when trying to connect signal to instance method
